bonus/confs/playground.yaml
apiVersion: v1
kind: Service
metadata:
  name: playground
spec:
  selector:
    app: playground
  ports:
    - protocol: TCP
      port: 3200
      targetPort: 8888
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playground
  labels:
    app: playground
spec:
  replicas: 1
  selector:
    matchLabels:
      app: playground
  template:
    metadata:
      labels:
        app: playground
    spec:
      containers:
      - name: wil42-playground
        image: wil42/playground:v1
        ports:
        - containerPort: 8888
